--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/thomasghobril/archiapp-microservices#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.3"
   }
 }
